# gnss_tools

./: .gitignore  README.md  groundtrack.py  pyproject.toml  skyplot.py
data/clk/: igs18754.cls
data/nav/: brdc3510.15g  brdc3510.15n
data/sp3/: GFZ0MGXRAP_20242830000_01D_05M_ORB.SP3  igs18754.sp3
src/gnss_tools/: cli_utils.py  groundtrack.py  plot_groundtrack.py  plot_utils.py  skyplot.py
